@@ -16,16 +16,18 @@
 package org.powermock;
 
 public class ClassWithInternalState {
-	
-	private static int staticState=5;
 
-	private static final int staticFinalState=15;
+	private static int staticState = 5;
+
+	private static final int staticFinalState = 15;
 
 	private int internalState = 0;
 
 	private int anotherInternalState = -1;
-	
+
 	private final String finalString = "hello";
+
+	private ClassWithPrivateMethods classWithPrivateMethods;
 
 	public String getFinalString() {
 		return finalString;
@@ -42,12 +44,16 @@ public class ClassWithInternalState {
 	public int getAnotherInternalState() {
 		return anotherInternalState;
 	}
-	
+
 	public static int getStaticState() {
 		return staticState;
 	}
 
 	public static int getStaticFinalState() {
 		return staticFinalState;
+	}
+
+	public ClassWithPrivateMethods getClassWithPrivateMethods() {
+		return classWithPrivateMethods;
 	}
 }
